--- a/CommonContracts/CommonContracts.csproj
+++ b/CommonContracts/CommonContracts.csproj
@@ -40,8 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseCommonContract.cs" />
+    <Compile Include="BaseContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DalContracts\DalContracts.csproj">
+      <Project>{1DF1DC5E-1A87-410B-AEDC-A4C6020018D9}</Project>
+      <Name>DalContracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
