--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1DF1DC5E-1A87-410B-AEDC-A4C6020018D9}</ProjectGuid>
+    <ProjectGuid>{F92E5988-5B86-4B87-844B-26ACC35F36DF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DalContracts</RootNamespace>
-    <AssemblyName>DalContracts</AssemblyName>
+    <RootNamespace>Common</RootNamespace>
+    <AssemblyName>Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,18 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DishesToFoodstuffs\DishesToFoodstuffsProcedures.cs" />
-    <Compile Include="DishesToFoodstuffs\DishesToFoodstuffsProceduresProcedureMapper.cs" />
-    <Compile Include="DishType\DishTypeProcedureMapper.cs" />
-    <Compile Include="DishType\DishTypeProcedures.cs" />
-    <Compile Include="Dish\DishProcedureMapper.cs" />
-    <Compile Include="Dish\DishProcedures.cs" />
-    <Compile Include="Foodstuff\FoodstuffProcedureMapper.cs" />
-    <Compile Include="Foodstuff\FoodstuffProcedures.cs" />
-    <Compile Include="IProcedureMapper.cs" />
-    <Compile Include="MeasurementUnits\MeasurementUnitsProcedureMapper.cs" />
-    <Compile Include="MeasurementUnits\MeasurementUnitsProcedures.cs" />
-    <Compile Include="ProcedureMapperBase.cs" />
+    <Compile Include="CustomKeyValue.cs" />
+    <Compile Include="EnumExtension.cs" />
+    <Compile Include="Enums\MeasurementUnitEnum.cs" />
+    <Compile Include="ExecutionHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
