--- a/CookBook/App.config
+++ b/CookBook/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="CookBookConnectionString"
+             connectionString="Data Source=(local); Initial Catalog=CookBook; Integrated Security=False; User Id=sa; Password=1234!@QW;Connection Timeout=30"
+             providerName="System.Data.SqlClient" />  
+  </connectionStrings>
 </configuration>
