--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1DF1DC5E-1A87-410B-AEDC-A4C6020018D9}</ProjectGuid>
+    <ProjectGuid>{4D211E75-15C0-4BE5-B4FA-69628AC77855}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DalContracts</RootNamespace>
-    <AssemblyName>DalContracts</AssemblyName>
+    <RootNamespace>Presentation</RootNamespace>
+    <AssemblyName>Presentation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,19 +41,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DishesToFoodstuffs\DishesToFoodstuffsProcedures.cs" />
-    <Compile Include="DishesToFoodstuffs\DishesToFoodstuffsProceduresProcedureMapper.cs" />
-    <Compile Include="DishType\DishTypeProcedureMapper.cs" />
-    <Compile Include="DishType\DishTypeProcedures.cs" />
-    <Compile Include="Dish\DishProcedureMapper.cs" />
-    <Compile Include="Dish\DishProcedures.cs" />
-    <Compile Include="Foodstuff\FoodstuffProcedureMapper.cs" />
-    <Compile Include="Foodstuff\FoodstuffProcedures.cs" />
-    <Compile Include="IProcedureMapper.cs" />
-    <Compile Include="MeasurementUnits\MeasurementUnitsProcedureMapper.cs" />
-    <Compile Include="MeasurementUnits\MeasurementUnitsProcedures.cs" />
-    <Compile Include="ProcedureMapperBase.cs" />
+    <Compile Include="Common\ApplicationController.cs" />
+    <Compile Include="Common\IApplicationController.cs" />
+    <Compile Include="Common\IContainer.cs" />
+    <Compile Include="Presenters\IPresenter.cs" />
+    <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="Presenters\MeasurementUnitsPresenter.cs" />
+    <Compile Include="Presenters\PresenterBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IMainView.cs" />
+    <Compile Include="Views\IMeasurementUnitsView.cs" />
+    <Compile Include="Views\IView.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{408480D9-1119-4450-A180-0F7D40F953C4}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CommonContracts\CommonContracts.csproj">
+      <Project>{519fb6b1-08fd-489b-80c4-4b67529f2673}</Project>
+      <Name>CommonContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{F92E5988-5B86-4B87-844B-26ACC35F36DF}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
