--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,11 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ICrudService.cs" />
+    <Compile Include="Contracts\IDishTypesService.cs" />
     <Compile Include="Contracts\IMeasurementUnitsService.cs" />
     <Compile Include="Models\BindableModelBase.cs" />
+    <Compile Include="Models\DishTypeModel.cs" />
     <Compile Include="Models\FoodstuffModel.cs" />
     <Compile Include="Models\MeasurementUnitModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DishTypesService.cs" />
     <Compile Include="Services\MeasurementUnitsService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
