--- a/CookBook/CookBook.csproj
+++ b/CookBook/CookBook.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityAdapter.cs" />
+    <Compile Include="Views\DishTypesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DishTypesForm.Designer.cs">
+      <DependentUpon>DishTypesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FoodstuffsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\DishTypesForm.resx">
+      <DependentUpon>DishTypesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FoodstuffsForm.resx">
       <DependentUpon>FoodstuffsForm.cs</DependentUpon>
     </EmbeddedResource>
