--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Contracts\ICrudService.cs" />
     <Compile Include="Contracts\IDishTypesService.cs" />
+    <Compile Include="Contracts\IFoodstuffService.cs" />
     <Compile Include="Contracts\IMeasurementUnitsService.cs" />
     <Compile Include="Models\BindableModelBase.cs" />
     <Compile Include="Models\DishTypeModel.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="Models\MeasurementUnitModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DishTypesService.cs" />
+    <Compile Include="Services\FoodstuffService.cs" />
     <Compile Include="Services\MeasurementUnitsService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
