--- a/CookBook/CookBook.csproj
+++ b/CookBook/CookBook.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityAdapter.cs" />
+    <Compile Include="Views\DishesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DishesForm.Designer.cs">
+      <DependentUpon>DishesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\DishTypesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\DishesForm.resx">
+      <DependentUpon>DishesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\DishTypesForm.resx">
       <DependentUpon>DishTypesForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +124,7 @@
       <DependentUpon>MeasurementUnitsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\BLL.Models.DishModel.datasource" />
     <None Include="Properties\DataSources\BLL.Models.FoodstuffModel.datasource" />
     <None Include="Properties\DataSources\BLL.Models.MeasurementUnitModel.datasource" />
     <None Include="Properties\DataSources\Common.KeyValueStringInt.datasource" />
