--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Common\ApplicationController.cs" />
     <Compile Include="Common\IApplicationController.cs" />
     <Compile Include="Common\IContainer.cs" />
+    <Compile Include="Presenters\DishesPresenter.cs" />
     <Compile Include="Presenters\DishTypesPresenter.cs" />
     <Compile Include="Presenters\FoodstuffsPresenter.cs" />
     <Compile Include="Presenters\IPresenter.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Presenters\MeasurementUnitsPresenter.cs" />
     <Compile Include="Presenters\PresenterBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IDishesView.cs" />
     <Compile Include="Views\IDishTypesView.cs" />
     <Compile Include="Views\IFoodstuffView.cs" />
     <Compile Include="Views\IMainView.cs" />
