--- a/CookBook/CookBook.csproj
+++ b/CookBook/CookBook.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Views\DishesForm.Designer.cs">
       <DependentUpon>DishesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\DishesToFoodstuffsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DishesToFoodstuffsForm.Designer.cs">
+      <DependentUpon>DishesToFoodstuffsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\DishTypesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     <EmbeddedResource Include="Views\DishesForm.resx">
       <DependentUpon>DishesForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\DishesToFoodstuffsForm.resx">
+      <DependentUpon>DishesToFoodstuffsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\DishTypesForm.resx">
       <DependentUpon>DishTypesForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +134,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\BLL.Models.DishModel.datasource" />
+    <None Include="Properties\DataSources\BLL.Models.DishToFoodstuffsModel.datasource" />
     <None Include="Properties\DataSources\BLL.Models.FoodstuffModel.datasource" />
     <None Include="Properties\DataSources\BLL.Models.MeasurementUnitModel.datasource" />
     <None Include="Properties\DataSources\Common.KeyValueStringInt.datasource" />
