--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Common\IApplicationController.cs" />
     <Compile Include="Common\IContainer.cs" />
     <Compile Include="Presenters\DishesPresenter.cs" />
+    <Compile Include="Presenters\DishesToFoodstuffsPresenter.cs" />
     <Compile Include="Presenters\DishTypesPresenter.cs" />
     <Compile Include="Presenters\FoodstuffsPresenter.cs" />
     <Compile Include="Presenters\IPresenter.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Presenters\MeasurementUnitsPresenter.cs" />
     <Compile Include="Presenters\PresenterBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IDishesToFoodstuffsView.cs" />
     <Compile Include="Views\IDishesView.cs" />
     <Compile Include="Views\IDishTypesView.cs" />
     <Compile Include="Views\IFoodstuffView.cs" />
