--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -30,6 +30,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI, Version=2.2.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OOXML, Version=2.2.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.OOXML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net, Version=2.2.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.OpenXml4Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats, Version=2.2.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,11 +66,14 @@
     <Compile Include="Contracts\IDishTypesService.cs" />
     <Compile Include="Contracts\IFoodstuffService.cs" />
     <Compile Include="Contracts\IMeasurementUnitsService.cs" />
+    <Compile Include="Contracts\IReportGenerationService.cs" />
     <Compile Include="Models\BindableModelBase.cs" />
+    <Compile Include="Models\DishCookModel.cs" />
     <Compile Include="Models\DishModel.cs" />
     <Compile Include="Models\DishToFoodstuffsModel.cs" />
     <Compile Include="Models\DishTypeModel.cs" />
     <Compile Include="Models\FoodstuffModel.cs" />
+    <Compile Include="Models\FoodstuffPrintModel.cs" />
     <Compile Include="Models\MeasurementUnitModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DishesService.cs" />
@@ -58,12 +81,17 @@
     <Compile Include="Services\DishTypesService.cs" />
     <Compile Include="Services\FoodstuffService.cs" />
     <Compile Include="Services\MeasurementUnitsService.cs" />
+    <Compile Include="Services\ReportGenerationService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonContracts\CommonContracts.csproj">
       <Project>{519FB6B1-08FD-489B-80C4-4B67529F2673}</Project>
       <Name>CommonContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{F92E5988-5B86-4B87-844B-26ACC35F36DF}</Project>
+      <Name>Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\DalContracts\DalContracts.csproj">
       <Project>{1DF1DC5E-1A87-410B-AEDC-A4C6020018D9}</Project>
@@ -74,7 +102,9 @@
       <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
